docs: update documentation