@@ -22,7 +22,6 @@ _Please read [the disclaimer](#disclaimer) below before using this connector._
 - [Building](#building-the-project)
 - [Running Examples](#running-examples)
 - [Limitations and Considerations](#limitations-and-considerations)
-- [License](#license)
 - [Contributing](#contributing)
 - [Disclaimer](#disclaimer)
 
@@ -77,7 +76,7 @@ val df = spark.readStream
   // broker options for the provided connection factory implementation
   .option("jms.source.messageFormat", "text")
   .option("jms.source.receiveTimeoutMs", "1000")
-  .option("jms.source.logIntervalMs", "10000")
+  .option("jms.source.commitIntervalMs", "10000")
   .option("jms.source.numPartitions", "8")
   .load()
 ```
@@ -177,7 +176,7 @@ The following options can be provided to both DataStreamReader:
 | Option                        | Required | Description                                                                                                              |
 |-------------------------------|----------|--------------------------------------------------------------------------------------------------------------------------|
 | `jms.source.messageFormat`    | Yes      | Message format that depends on the Message type (TextMessage or BytesMessage): `text` or `binary`                        |
-| `jms.source.logIntervalMs`    | Yes      | Interval in milliseconds to use for storing received messages in the write-ahead log                                     |
+| `jms.source.commitIntervalMs` | Yes      | Interval in milliseconds to use for storing received messages in the write-ahead log                                     |
 | `jms.source.receiveTimeoutMs` | No       | Timeout in milliseconds for using when Consumer.receive(...) is called; if omitted Consumer.receiveNoWait() will be used |
 | `jms.source.bufferSize`       | No       | Size of the internal buffer to store messages before they are written into the write-ahead log (defaults to 5000)        |
 | `jms.source.numOffsetsToKeep` | No       | Number of offsets in the Spark metadata directory to retain for tracking (defaults to 100)                               |
@@ -209,22 +208,20 @@ This will create JAR files in the target directories:
 The project includes examples for working with ActiveMQ. To run each example, you have to execute two commands:
 
 ```bash
-# Run ActiveMQ broker and message generator
-sbt "examples/runMain io.github.dyaraev.spark.connector.jms.example.ActiveMqMessageGenerator /tmp/activemq-data"
-
-# Run Spark application
-sbt "examples/runMain io.github.dyaraev.spark.connector.jms.example.JmsSourceExample /tmp/spark-test-source" 
+# Run an ActiveMQ broker, a test message generator and an example Spark job with the JMS source
+sbt "examples/runMain io.github.dyaraev.spark.connector.jms.example.ExampleApp receiver-job --workingDirectory /tmp/spark-receiver-job"
 ```
 
 ```bash
-# Run ActiveMQ broker and message reader
-sbt "examples/runMain io.github.dyaraev.spark.connector.jms.example.ActiveMqMessageReader /tmp/activemq-data"
+# Run an ActiveMQ broker, a test file generator, an example Spark job with the JMS sink and a test message reader
+sbt "examples/runMain io.github.dyaraev.spark.connector.jms.example.ExampleApp sender-job --workingDirectory /tmp/spark-sender-job"
 
-# Run Spark application
-sbt "examples/runMain io.github.dyaraev.spark.connector.jms.example.JmsSinkExample /tmp/spark-test-sink"
 ```
 
-Executing examples may require the following JVM option to be set: `--add-exports java.base/sun.nio.ch=ALL-UNNAMED`.
+You can play with the example applications by changing the configuration options.
+All available options are listed when running commands with the `--help` flag.
+
+Executing examples in an IDE may require the following JVM option to be set: `--add-opens java.base/sun.nio.ch=ALL-UNNAMED`.
 
 ## Limitations and Considerations
 
@@ -238,10 +235,6 @@ Some of the limitations include:
 - The number of connections used by the sink component depends on the number of partitions
 - Connections in the sink component are created for each batch and not reused
 - The connector uses a fail-fast strategy, so no proper retry logic for failed writes is implemented
-
-## License
-
-TODO: add license information here
 
 ## Contributing
 
